deploy/openshift/components/postgres-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels: {app.kubernetes.io/name: postgres, app.kubernetes.io/part-of: alternative-credit-scoring}
spec:
  clusterIP: None
  selector: {app.kubernetes.io/name: postgres}
  ports: [{name: postgres, port: 5432, targetPort: postgres, protocol: TCP}]
